<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/menu"
        android:checkableBehavior="none">
        <item
            android:id="@id/homeFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@id/controlPanelMainFragment"
            android:icon="@drawable/ic_grid"
            android:title="@string/menu_control_panel" />
        <item
            android:id="@id/settingsFragment"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@id/actionHistoryFragment"
            android:icon="@drawable/ic_history"
            android:title="@string/menu_action_history" />
    </group>

</menu>