<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>

        <variable
            name="viewModel"
            type="com.bonacode.securehome.ui.feature.main.controlpanel.system.ControlPanelSystemFunctionsViewModel"
            />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <com.bonacode.securehome.ui.views.ButtonAction
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.checkSystemStatusClicked()}"
            app:buttonActionIcon="@drawable/ic_status"
            app:buttonActionLabel="@string/sms_action_type_check_system_status"
            />

        <com.bonacode.securehome.ui.views.ButtonAction
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.checkLastAlarmClicked()}"
            app:buttonActionIcon="@drawable/ic_alarm"
            app:buttonActionLabel="@string/sms_action_type_check_last_alarm"
            />

        <com.bonacode.securehome.ui.views.ButtonAction
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.checkSimCreditClicked()}"
            app:buttonActionIcon="@drawable/ic_money"
            app:buttonActionLabel="@string/sms_action_type_check_sim_credit"
            />

    </LinearLayout>
</layout>