<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="viewModel"
            type="com.bonacode.securehome.ui.feature.main.actionHistory.ActionHistoryViewModel"
            />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:animateLayoutChanges="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end|center_vertical"
            android:orientation="horizontal"
            >

            <androidx.appcompat.widget.AppCompatButton
                style="@style/ButtonFlat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.clearFilters()}"
                android:text="@string/action_history_clear_filters"
                android:textAppearance="?textAppearanceButtonFlat"
                android:visibility="@{viewModel.showClearFiltersButton}"
                />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/ButtonFlat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.showDialogQuestionClearHistory()}"
                android:text="@string/action_history_clear_history"
                android:textAppearance="?textAppearanceButtonFlat"
                />

        </LinearLayout>

        <View
            android:alpha="0.5"
            android:background="?colorIconAccent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_height"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/actionHistoryList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_action_history"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/emptyListView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAppearance="?textAppearanceBody"
                android:text="@string/action_history_empty_list"
                tools:text="Empty list"
                />

        </FrameLayout>

    </LinearLayout>
</layout>