<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>

        <variable
            name="viewModel"
            type="com.bonacode.securehome.ui.feature.setup.intro.SetupIntroViewModel"
            />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/header"
                style="@style/TextHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_huge"
                android:text="@string/setup_intro_welcome_text"
                android:textAppearance="?textAppearanceHeader"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_huge"
                android:layout_marginBottom="@dimen/margin_huge"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header"
                >

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/icon"
                    android:layout_width="@dimen/setup_icon_size"
                    android:layout_height="@dimen/setup_icon_size"
                    android:rotation="270"
                    app:srcCompat="@drawable/ic_handshake"
                    >

                </androidx.appcompat.widget.AppCompatImageView>

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextBody"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_huge"
                    android:text="@string/setup_intro_info_text"
                    android:textAppearance="?textAppearanceBody"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextBody"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/setup_intro_works_only_with"
                    android:textAppearance="?textAppearanceBody"
                    />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button"
                style="@style/ButtonPrimary"
                android:layout_width="0dp"
                android:layout_marginBottom="@dimen/margin_big"
                android:onClick="@{() -> viewModel.navigateForward()}"
                android:text="@string/setup_intro_button_start_configuration"
                android:textAppearance="?textAppearanceButtonPrimary"
                app:layout_constraintBottom_toTopOf="@id/footer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <FrameLayout
                android:id="@+id/footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_big"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                >

                <include layout="@layout/view_bonacode_footer" />
            </FrameLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>