<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>

        <variable
            name="viewModel"
            type="com.bonacode.securehome.ui.feature.setup.enterphonenumber.SetupEnterPhoneNumberViewModel"
            />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/header"
                style="@style/TextHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_huge"
                android:text="@string/setup_enter_phone_number_text"
                android:textAppearance="?textAppearanceHeader"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_huge"
                android:layout_marginBottom="@dimen/margin_huge"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header"
                >

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/icon"
                    android:layout_width="@dimen/setup_icon_small_size"
                    android:layout_height="@dimen/setup_icon_small_size"
                    android:layout_marginBottom="@dimen/margin_big"
                    app:srcCompat="@drawable/ic_sim"
                    >

                </androidx.appcompat.widget.AppCompatImageView>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="?colorBackground"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/setup_enter_phone_number_phone_number_hint"
                        android:inputType="number"
                        android:paddingStart="0dp"
                        android:paddingEnd="0dp"
                        android:text="@={viewModel.phoneNumber}"
                        android:textAppearance="?textAppearanceInput"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextBody"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:lines="3"
                    android:text="@string/setup_enter_phone_number_info_text"
                    android:textAppearance="?textAppearanceBody"
                    />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button"
                style="@style/ButtonPrimary"
                android:layout_width="0dp"
                android:layout_marginBottom="@dimen/margin_big"
                android:enabled="@{viewModel.formValid}"
                android:onClick="@{() -> viewModel.saveAndNavigateForward()}"
                android:text="@string/setup_enter_phone_number_button_next"
                android:textAppearance="?textAppearanceButtonPrimary"
                app:layout_constraintBottom_toTopOf="@id/footer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <FrameLayout
                android:id="@+id/footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_big"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                >

                <include layout="@layout/view_bonacode_footer" />
            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>